--- a/app/scss/helpers/_animations/_home.scss
+++ b/app/scss/helpers/_animations/_home.scss
@@ -10,5 +10,6 @@
 
   .skills__item {
     @extend %reset-animation;
+    opacity: 0.03;
   }
 }
