--- a/app/scss/layout/_home/_skills.scss
+++ b/app/scss/layout/_home/_skills.scss
@@ -1,9 +1,10 @@
 .skills {
+  overflow: hidden;
+
   width: 100%;
   height: 100%;
 
   position: absolute;
-  opacity: 0.03;
 
   pointer-events: none;
 
@@ -13,7 +14,7 @@
     position: absolute;
     top: 50%;
     left: 100%;
-    transform: translate(-68%, -50%) rotate(90deg);
+    transform: translate(-69%, -50%) rotate(90deg);
   }
 
   &__item {
@@ -27,17 +28,20 @@
     transform: translateX(-30px);
 
     &--1 {
-      font-size: 4rem;
+      font-size: 3.5rem;
       @include transition(0.2s, 0.2s);
     }
+
     &--2 {
       font-size: 2.5rem;
       @include transition(0.2s, 0.3s);
     }
+
     &--3 {
       font-size: 2.5rem;
       @include transition(0.2s, 0.4s);
     }
+
     &--4 {
       font-size: 2rem;
       @include transition(0.2s, 0.5s);
@@ -63,12 +67,15 @@
       &--1 {
         font-size: 12vw;
       }
+
       &--2 {
         font-size: 7vw;
       }
+
       &--3 {
         font-size: 7vw;
       }
+
       &--4 {
         font-size: 6vw;
       }
