--- a/app/scss/layout/_home/_title.scss
+++ b/app/scss/layout/_home/_title.scss
@@ -1,19 +1,20 @@
 .title__secondary {
-  width: fit-content;
+  //   width: fit-content;
   padding: 0 5px;
+  margin: 0 0 $d-mini 0;
 
   font-family: $ff-secondary;
   font-size: 1.5rem;
 
-  margin: 0 0 $d-mini 0;
 
   background: linear-gradient(to right, $c-purple, $c-teal);
   -webkit-text-fill-color: transparent;
   -webkit-background-clip: text;
   background-clip: text;
 
-  opacity: 0;
   pointer-events: none;
+
+  opacity: 0;
   transform: translateY(30px);
   @include transition(0.2s, 0.1s);
 }
@@ -24,6 +25,7 @@
       display: flex;
       justify-content: flex-end;
     }
+
     &__secondary {
       margin-bottom: $d-sm;
     }
